# confdantic

./: .gitignore  README.md  pyproject.toml
confdantic/: __init__.py  confdantic.py  confen.py
confen/: __init__.py  confen.py
tests/: test_confdantic.py  test_confen.py
